# Virtus-Job

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml  vercel.json
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  start.sh
apps/api/app/: config.py  database.py  dependencies.py  main.py
apps/api/migrations/: env.py
scrapers/: Dockerfile  __init__.py  cli.py  config.py  health_check.py  jda_daily.py  models.py  pyproject.toml  requirements.txt  run_jda_daily.ps1  runner.py  seed_sources.py  setup_scheduler.ps1  validate_mock_ai.py  validate_pipeline.py
scrapers/auth/: __init__.py  jda_authenticator.py  session_manager.py
scrapers/base/: authenticated_browser.py  browser.py  http_client.py  spider.py
scrapers/pipeline/: ai_extractor.py  deduplicator.py  hybrid_strategy.py  normalizer.py  page_processor.py  saver.py  vision_extractor.py  visual_segmenter.py
scrapers/sources/: __init__.py  jornal_angola.py  maptess.py
scrapers/tests/: diagnose_jda_entrar.py  diagnose_jda_login.py  jda_capture_page_elements.py  jda_capture_pressreader.py  jda_inspect_pressreader.py  jda_navigate_dated_edition.py  jda_navigate_pages.py  jda_navigate_to_classifieds.py  jda_process_all_pages.py  jda_visual_mvp.py  test_especial_extract.py  test_grid_demo.py  test_jda_auth.py  test_jda_render.py  test_jda_sso_trace.py  test_jda_unlock.py  test_jda_vision.py  test_kiami_api.py  test_pipeline.py  test_pressreader_login.py  test_segmentation.py
scripts/: setup.ps1
(+84 files in other folders)
