[project]
name = "virtus-job-scrapers"
version = "0.1.0"
description = "Virtus Job — Intelligent Scraping Engine"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["scrapers"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "B024"]

[tool.ruff.lint.isort]
known-first-party = ["scrapers", "app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
